bring example project up-to-date

--- a/src/site/language/en-GB/en-GB.com_rolodex.ini
+++ b/src/site/language/en-GB/en-GB.com_rolodex.ini
@@ -9,6 +9,7 @@
 
 COM_ROLODEX_CARD_COL_NAME='Name'
 COM_ROLODEX_CARD_COL_PHONE='Phone'
+COM_ROLODEX_VIEW_CARD_404='Unable to locate the requested Card'
 COM_ROLODEX_VIEW_CARD_READ='Card'
 COM_ROLODEX_VIEW_CARDS_NONE='No cards were found.'
 COM_ROLODEX_VIEW_CARDS_READ='Card List'
